--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@eslint/js": "^9.17.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.17.0",
+    "file-loader": "^6.2.0",
     "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
     "prettier": "3.4.2",
