--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "git subtree push --prefix dist origin gh-pages",
     "build": "webpack --config webpack.prod.cjs",
-    "start": "webpack serve --open --config webpack.dev.cjs"
+    "start": "webpack serve --open --config webpack.dev.cjs",
+    "preview": "npm run build && http-server dist"
   },
   "keywords": [],
   "author": "",
